--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-is": "^18.2.4",
     "framer-motion": "^10.16.4",
     "i18next": "^23.7.6",
+    "i18next-browser-languagedetector": "^7.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.4.1"
