:zap: Integration image slider

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,15 @@
 {
-  "cSpell.words": ["chakra", "fontsource", "Minh", "Tien", "Viet"],
+  "cSpell.words": [
+    "Appium",
+    "chakra",
+    "Charka",
+    "fontsource",
+    "Hackerrank",
+    "ISTQB",
+    "Jmeter",
+    "Minh",
+    "Tien",
+    "Viet"
+  ],
   "cSpell.language": "en,vi"
 }
