--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,10 +1,14 @@
 {
   "compilerOptions": {
+    "module": "ES2022",
+    "moduleResolution": "node",
+    "jsx": "react-jsx",
     "baseUrl": ".",
-    "target": "ES6",
+    "target": "ES2022",
     "paths": {
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules"]
 }
