--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "overview",
   "private": true,
-  "version": "0.0.0",
+  "homepage": "https://gitname.github.io/",
+  "version": "1.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
